# sdorfehs

./: .dir-locals.el  .gitignore  AUTHORS  ChangeLog  FAQ  MERCHANDISE  Makefile  Makefile.am  NEWS  README  README.developers  README.md  TODO  acconfig.h  actions.c  actions.h  autogen.sh  bar.c  bar.h  communications.c  communications.h  completions.c  completions.h  conf.h  config.h  configure.ac  configure.in  data.h  editor.c  editor.h  events.c  events.h  format.c  format.h  frame.c  frame.h  globals.c  globals.h  group.c  group.h  (+42 more)
.github/workflows/: ci.yml
contrib/: .gitignore  Makefile.am  allwindows.sh  clickframe.pl  expose.pl  genrpbindings  nogaps.el  ratdate.sh  ratpoison.el  ratpoisonrc-mode.el  rpbatch.pl  rpshowall.sh  rpws  sloppy.c  split.sh  unrat.c
debian/: README.Debian  README.source  callmenu.sh  changelog  control  copyright  dirs  emacsen-install  emacsen-remove  menu  menu-method  postinst  prerm  ratpoison.1  ratpoison.doc-base  ratpoison.examples  ratpoison.info  ratpoison.install  ratpoison.menu  ratpoison.watch  rules  watch
debian/patches/: 00list  01-xterm.dpatch  530176.diff  README  _series  brl-enlarge.diff  brl-menu.diff  brl-menu.reconf  manpage.diff  proper-install-info.diff  restorededication.patch  series
doc/: .cvsignore  .gitignore  Makefile.am  fdl.texi  ipaq.ratpoisonrc  ratpoison.1  ratpoison.info  ratpoison.mdoc.1  ratpoison.texi  ratpoisonrc-mode.el  sample.ratpoisonrc
man/: Makefile.am  ratpoison.1
src/: .cvsignore  .gitignore  ChangeLog  Makefile.am  actions.c  actions.h  bar.c  bar.h  communications.c  communications.h  completions.c  completions.h  conf.h  config.h.in  data.h  editor.c  editor.h  events.c  events.h  format.c  format.h  frame.c  frame.h  getopt.c  getopt.h  getopt1.c  globals.c  globals.h  group.c  group.h  history.c  history.h  hook.c  hook.h  input.c  input.h  linkedlist.c  linkedlist.h  list.c  list.h  (+25 more)
