bin_PROGRAMS = ratpoison

ratpoison_SOURCES = 			\
		actions.c		\
		actions.h		\
		bar.c			\
		bar.h			\
		communications.c	\
		communications.h	\
		conf.h			\
		data.h			\
		events.c		\
		events.h		\
		getopt.c		\
		getopt.h		\
		getopt1.c		\
		input.c			\
		input.h			\
		list.c			\
		list.h			\
		main.c			\
		manage.c		\
		manage.h		\
		messages.h		\
		number.c		\
		number.h		\
		ratpoison.h		\
		sbuf.c			\
		sbuf.h
