## Process this file with automake to produce Makefile.in
## Copyright (C) 2000, 2001 Shawn Betts <sabetts@users.sourceforge.net>
##
## This file is part of ratpoison.
##
## ratpoison is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## ratpoison is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
##
## $Id: Makefile.am,v 1.17 2003/05/20 07:20:15 sabetts Exp $

bin_PROGRAMS		= ratpoison

ratpoison_SOURCES	= actions.c		\
			actions.h		\
			bar.c			\
			bar.h			\
			communications.c	\
			communications.h	\
			conf.h			\
			data.h			\
			events.c		\
			events.h		\
			frame.c			\
			frame.h			\
			getopt.c		\
			getopt.h		\
			getopt1.c		\
			globals.h		\
			globals.c		\
			group.h			\
			group.c			\
			input.c			\
			input.h			\
			linkedlist.h		\
			linkedlist.c		\
			main.c			\
			manage.c		\
			manage.h		\
			messages.h		\
			number.c		\
			number.h		\
			ratpoison.h		\
			sbuf.c			\
			sbuf.h			\
			screen.h		\
			screen.c		\
			split.c			\
			split.h			\
			window.c		\
			window.h